<resources>
    <string name="app_name">Safe Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_no_account_signup">Don\'t have an account? <font color="#2196F3">Register Now</font></string>
    <string name="txt_register_header">Create New Account</string>
    <string name="txt_register_subheader">Please provide all the required information</string>
    <string name="txt_username">Username</string>
    <string name="txt_username_hint">cheezycode</string>
    <string name="txt_email">Email</string>
    <string name="txt_email_hint">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_password_hint">........</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_already_have_account">Already have an account?</string>
    <string name="txt_login_header">Welcome Back!</string>
    <string name="txt_forgot_pass_header">Forgot your Password?</string>
    <string name="txt_login_subheader">Login to access your notes</string>
    <string name="txt_forgot_password_subheader">We will send you an email on the given Email Address</string>
    <string name="txt_login">Login</string>
    <string name="txt_error_message">%1$S*</string>
    <string name="note_title">Title</string>
    <string name="txt_title_hint">Write your title</string>
    <string name="txt_description">Description</string>
    <string name="txt_description_hint">Write your description</string>
    <string name="txt_submit">Submit</string>
    <string name="add_note">Add Note</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="provide_credentials">Please provide credentials</string>
    <string name="valid_emailAddress">Please provide valid email</string>
    <string name="valid_password">Password should be greater than 5</string>
    <string name="send">send</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">safenotesindia.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_notes">Note</string>
    <string name="menu_tag">Tags</string>
    <string name="menu_task">Task</string>
    <string name="menu_shared">Shared with me</string>
    <string name="others">Others</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_feedback">Feedback</string>
    <string name="no_internet">No Internet</string>
    <string name="txt_images">Images</string>
    <string name="txt_audio">Audio</string>
    <string name="txt_documents">Documents</string>
    <string name="txt_links">Links</string>
    <string name="tab_description">tab description</string>
    <string name="notes_quotes">\'I\'m very busy at the moment,I have to drink a cup of tea.\'</string>
    <string name="sherlock">-Sherlock</string>
    <string name="notes">Notes</string>
    <string name="notes_description">notes_description</string>
    <string name="recent">Recent</string>
    <string name="personalize_your_notes">Personalize your notes</string>
    <string name="notes_tags">You can add, remove, change and customize your notes with images, audio, links etc.</string>
    <string name="more_image_description">more_image_description</string>
    <string name="Add_Images">Add Images</string>
    <string name="note">Note</string>
    <string name="task">Task</string>
    <string name="audio_duration">Audio Description</string>
</resources>